# personal_main

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  gunicorn.conf.py  main.py  portfolio-api.service
.github/workflows/: prod.yml
database/: database.py
db/: Dockerfile  env.example
db/initdb/: setup.sh
docs/: chat.xcf  cv.xcf  document.xcf  email.xcf  git_notes.md  github.xcf  linkedin.xcf  notes.md
personal_api/: README.md  env.example  gunicorn.conf.py  personal-api.service  pyproject.toml  requirements.txt
personal_api/.github/workflows/: prod.yml
personal_api/database/: database.py
personal_api/docs/: db_setup.sh  nginx.conf
personal_api/models/: model.py
personal_api/portfolio-api/: main.py
personal_api/routes/: route.py
portfolio-api/: pyproject.toml
