[project]
name = "portfolio"
version = "0.1.0"
description = "Personal professional website to promote self"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Davey Walbeck", email = "daveywalbeck@gmail.com"}
]
maintainers = [
    {name = "Davey Walbeck", email = "daveywalbeck@gmail.com"}
]
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "openai>=1.75.0",
    "pgvector>=0.4.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.6"
    "uvicorn>=0.34.2",
]

[tool.uv.workspace]
members = [
    "portfolio-api",
]
